--- a/.github/workflows/ci_dockerhub.yaml
+++ b/.github/workflows/ci_dockerhub.yaml
@@ -23,7 +23,7 @@ jobs:
           IMAGE_TAG: latest
         
         run:
-          docker built -t ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG
 
 
