--- a/.github/workflows/ci_dockerhub.yaml
+++ b/.github/workflows/ci_dockerhub.yaml
@@ -22,7 +22,7 @@ jobs:
           REPOSITORY: nginx
           IMAGE_TAG: latest
         
-        run:
+        run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG
 
